# mesh-sieve

./: .gitignore  API_Guide.md  CHANGELOG.md  Cargo.toml  LICENSE  Physics_Guide.md  README.md  build.rs  test_output.txt
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
benches/: fvm_face_loop_bench.rs  partition_bench.rs  traversal_cache_bench.rs
docs/: MIGRATING.md  coastal-mesh-labels.md  dm-options.md  exodus.md  fe-setup.md  geometry-quality.md  hdf5-layout.md  io-format-capabilities.md  topology-api.md
examples/: adapt_with_metric.rs  comprehensive_mesh_workflow.rs  cuda_fvm_pipeline.rs  distribute_mpi.rs  distribute_with_overlap.rs  distributed_rcm.rs  dm_metric_label_adapt.rs  e2e_showcase.rs  external_mesh_workflows.rs  extrude_boundary_constraints.rs  fvm_distributed_qa.rs  gmsh_interpolate_quality.rs  gmsh_io.rs  mesh_bundle_shared_boundary.rs  mesh_distribute_two_ranks.rs  meshgen_basic.rs  mixed_sections.rs  mpi_complete.rs  mpi_complete_multiple_neighbors.rs  mpi_complete_no_overlap.rs  mpi_complete_stack.rs  mpi_partition_exchange.rs  mpi_partitioned_io.rs  partition.rs  periodic_2d_wrap.rs  petsc_sf_composed_pipeline.rs  poisson_quad.rs  poisson_segment.rs  refine_distribute_complete_section.rs  refine_triangle.rs
examples/support/: test_graph_impl.rs  tiny_mesh.rs
output/partitioned_io/bundle/: mesh.bundle.json
output/partitioned_io/local/: mesh.rank0.mesh  mesh.rank0.meta.json  mesh.rank1.mesh  mesh.rank1.meta.json
proptest-regressions/partitioning/tests/: partition_property_tests.txt
references/: check.md
src/: debug_invariants.rs  diagnostics.rs  dm.rs  dm_options.rs  forest.rs  lib.rs  mesh_error.rs  mesh_graph.rs  metis_bindings.rs  section.rs
src/accelerator/: backend.rs  csr.rs  error.rs  fvm.rs  mod.rs  plan.rs  reduction.rs  section.rs
src/accelerator/cuda/: buffer.rs  context.rs  cusparse.rs  executor.rs  mod.rs  module_cache.rs
src/accelerator/cuda/kernels/: fvm_operator.cu  fvm_scalar.cu  reduction.cu
src/adapt/: mod.rs
src/algs/: adjacency_graph.rs  assembly.rs  boundary.rs  communicator.rs  completion.rs  distribute.rs  dual_graph.rs  extrude.rs  field_transfer.rs  interpolate.rs  lattice.rs  lattice.rs.DELETE_ME  meshgen.rs  metis_partition.rs  mod.rs  partition.rs  point_sf.rs  rcm.rs  reduction.rs  renumber.rs  submesh.rs  transform.rs  traversal.rs  traversal_core.rs  traversal_ref.rs  wire.rs
src/algs/completion/: closure_fetch.rs  data_exchange.rs  mod.rs  neighbour_links.rs  section_completion.rs  sieve_completion.rs  size_exchange.rs  stack_completion.rs  stack_exchange.rs
src/data/: _debug_invariants.rs  atlas.rs  bc.rs  bundle.rs  closure.rs  constrained_section.rs  coordinate_dm.rs  coordinates.rs  discretization.rs  global_map.rs  hanging_node_constraints.rs  mixed_section.rs  mod.rs  multi_section.rs  section.rs  section_layout.rs  slice_storage.rs  storage.rs
src/data/refine/: delta.rs  helpers.rs  mod.rs  sieved_array.rs
src/data/wgpu/: mod.rs  reverse_copy.wgsl
src/discretization/: mod.rs  runtime.rs
src/geometry/: fvm.rs  locate.rs  metrics.rs  mod.rs  quality.rs
src/geometry/tests/: fvm_tests.rs  mod.rs
src/io/: bundle.rs  cgns.rs  exodus.rs  fluent.rs  gmsh.rs  hdf5.rs  mod.rs  partitioned.rs  petsc_hdf5.rs  ply.rs  vtk.rs  xdmf.rs
src/mesh_generation/: mod.rs
src/overlap/: delta.rs  mod.rs  overlap.rs  perf.rs
src/partitioning/: binpack.rs  error.rs  graph_traits.rs  louvain.rs  metrics.rs  mod.rs  parallel.rs  seed_select.rs  state.rs  vertex_cut.rs
src/partitioning/louvain/: counters.rs
src/partitioning/tests/: mod.rs  partition_property_tests.rs
src/physics/: fe.rs  fvm.rs  mod.rs
src/topology/: _debug_invariants.rs  adapt.rs  anchors.rs  arrow.rs  arrow_tests.rs  bounds.rs  cache.rs  cell_type.rs  coarsen.rs  coastal.rs  labels.rs  mod.rs  orientation.rs  ownership.rs  periodic.rs  point.rs  sieve.rs  stack.rs  stratum.rs  utils.rs  validation.rs
src/topology/refine/: mod.rs
src/topology/sieve/: arc_payload.rs  build_ext.rs  frozen_csr.rs  in_memory.rs  in_memory_det.rs  in_memory_oriented.rs  lattice.rs  mod.rs  mutable.rs  oriented.rs  query_ext.rs  reserve.rs  sieve_ref.rs  sieve_refs.rs  sieve_trait.rs  strata.rs  traversal_iter.rs
src/topology/sieve/tests/: determinism_tests.rs  lattice_tests.rs  mod.rs  orientation_tests.rs  pointset_tests.rs  remove_tests.rs  trait_default_tests.rs  trait_tests.rs  upsert_tests.rs
src/topology/tests/: coastal_tests.rs  debug_invariants.rs  labels_tests.rs  mod.rs  utils_tests.rs  validation_tests.rs
tests/: accelerator_phase2.rs  accelerator_plans.rs  adapt_anchors.rs  adapt_metric.rs  adapt_quality.rs  adjacency_graph_tests.rs  adjacency_policy.rs  assembly_api.rs  atlas_section_scatter.rs  bc_dirichlet.rs  boundary_classification_tests.rs  bundle_refine.rs  cgns_gate.rs  cgns_hdf5_io.rs  communicator_parity.rs  communicator_tests.rs  completion.rs  coordinate_dm.rs  cuda_fvm.rs  cuda_strict_mode.rs  delta_name_compat.rs  deterministic_traversal.rs  diagnostics_checks.rs  discretization_metadata.rs  discretization_petsc_workflows.rs  distribute_serial.rs  distribute_tests.rs  distribute_with_overlap.rs  dm_metric_transfer.rs  dmplex_closure.rs  dual_graph.rs  dual_graph_tests.rs  e2e_showcase_smoke.rs  edge_and_build.rs  exodus_roundtrip.rs  exodus_validation.rs  external_mesh_backends.rs  field_transfer.rs  frozen_csr.rs  fvm_distributed_qa.rs  (+69 more)
tests/data/: atlas_contains_len.rs  atlas_roundtrip.rs  bundle_assemble_length_mismatch.rs  bundle_assemble_with_sum.rs  bundle_vec_dofs.rs  invariants.rs  section_scatter.rs  section_with_atlas_mut.rs  sieved_array_iter_in_order.rs  util.rs
tests/fixtures/io/: README.md  cgns_hdf5_fixture.json  exodus_ascii_triangle.exo  exodus_ii_hdf5_fixture.json  fluent_quad.msh  gmsh_v2_triangle.msh  petsc_dmplex_hdf5_fixture.json  surface.ply
