[package]
name = "mesh-sieve"
version = "1.1.5"
edition = "2024"
description = "Modular, high-performance Rust library for mesh and data management, designed for scientific computing and PDE codes."
license = "MIT"
repository = "https://github.com/tmathis720/mesh-sieve"
homepage = "https://github.com/tmathis720/mesh-sieve"
documentation = "https://docs.rs/mesh-sieve"
readme = "README.md"
keywords = ["mesh", "PDE", "scientific-computing", "parallel", "MPI"]
categories = ["science", "data-structures", "database-implementations"]

[dependencies]
bytes = "1.10.1"
dashmap = "6.1.0"
itertools = "0.14.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
hashbrown = "0.14.3"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
static_assertions = "1.1.0"
bytemuck = { version = "1", features = ["derive"] }
mpi = { version = "0.8", features = ["derive", "user-operations"] }
libffi-sys = { version = "2.3", default-features = false, features = ["system"] }
metis = "0.2"
metis-sys = "0.3.2"
rand = { version = "0.8", features = ["std", "small_rng"], optional = true }
ahash = { version = "0.8", optional = true }
num-traits = "0.2"
serial_test = "3.2.0"
log = "0.4"
thiserror = "2.0.12"
cargo-mpirun = "0.1.8"

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
bincode = "1.3"
serial_test = "3.2.0"
proptest = "1.0"
criterion = "0.4"

[features]
default = []            # keep core lean
mpi-support = ["rand", "ahash", "rayon"]
metis-support = ["pkg-config", "bindgen"]


[build-dependencies]
pkg-config = { version = "0.3", optional = true }
bindgen = { version = "0.65", optional = true }
regex = "1.8"

[[example]]
name = "mesh_distribute_two_ranks"
# required-features = ["mpi-support"]
