[package]
name = "mesh-sieve"
version = "3.0.0"
authors = ["Thomas James Mathis <tmathis720@gmail.com>"]
edition = "2024"
description = "Modular, high-performance Rust library for mesh and data management, designed for scientific computing and PDE codes."
license = "MIT"
repository = "https://github.com/tmathis720/mesh-sieve"
homepage = "https://github.com/tmathis720/mesh-sieve"
documentation = "https://docs.rs/mesh-sieve"
readme = "README.md"
keywords = ["mesh", "PDE", "scientific-computing", "parallel", "MPI"]
categories = ["science", "data-structures", "database-implementations"]

[dependencies]
bytes = "1.10.1"
dashmap = "6.1.0"
itertools = "0.14.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
hashbrown = "0.14.3"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
static_assertions = "1.1.0"
bytemuck = { version = "1", features = ["derive"] }
# MPI optional: enabled only when the mpi-support feature is requested
mpi = { version = "0.8", optional = true, default-features = false, features = [] }
# libffi/metis optional to avoid requiring system libs in CI unless explicitly enabled
libffi-sys = { version = "2.3", default-features = false, features = ["system"], optional = true }
metis = { version = "0.2", optional = true }
metis-sys = { version = "0.3.2", optional = true }
rand = { version = "0.8", features = ["std", "small_rng"], optional = true }
ahash = { version = "0.8", optional = true }
num-traits = "0.2"
serial_test = "3.2.0"
log = "0.4"
thiserror = "2.0.12"
wgpu = { version = "0.19", optional = true, features = ["wgsl"] }
pollster = { version = "0.3", optional = true }
futures-intrusive = { version = "0.5", optional = true }

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
bincode = "1.3"
serial_test = "3.2.0"
proptest = "1.0"
rand_chacha = "0.3"
criterion = "0.4"
env_logger = "0.11"
rayon = "1"

[features]
default = []
# Legacy, infallible adapter. Off by default.
map-adapter = []
mpi-support = ["dep:mpi", "rayon", "dep:rand", "dep:ahash"]
mpi-derive = ["mpi/derive"]
metis-support = ["metis", "metis-sys", "libffi-sys","bindgen","pkg-config"]
strict-invariants = []   # compile-time switch for invariant checking in release
check-invariants = ["strict-invariants"]
check-empty-part = []
fast-hash = ["dep:ahash"]
deterministic-order = []
deterministic-owners = []
check-graph-edges = []
expensive-checks = []
binpack-retry = []
log = []
exact-metrics = []
mem-snapshot = []
rayon = ["dep:rayon"]
sparse-bitset = []
wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]


[build-dependencies]
pkg-config = { version = "0.3", optional = true }
bindgen = { version = "0.65", optional = true }
regex = "1.8"

[[example]]
name = "mesh_distribute_two_ranks"
# required-features = ["mpi-support"]
