[package]
name = "mesh-sieve"
version = "4.0.1"
authors = ["Thomas James Mathis <tmathis720@gmail.com>"]
edition = "2024"
description = "Modular, high-performance Rust library for mesh and data management, designed for scientific computing and PDE codes."
license = "MIT"
repository = "https://github.com/tmathis720/mesh-sieve"
homepage = "https://github.com/tmathis720/mesh-sieve"
documentation = "https://docs.rs/mesh-sieve"
readme = "README.md"
keywords = ["mesh", "PDE", "scientific-computing", "parallel", "MPI"]
categories = ["science", "data-structures", "database-implementations"]

[dependencies]
bytes = "1.10.1"
dashmap = "6.1.0"
itertools = "0.14.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
hashbrown = "0.14.3"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
bytemuck = { version = "1", features = ["derive"] }
roxmltree = "0.20"
hdf5 = "0.8.1"
hdf5-sys = { version = "0.8.1", features = ["static"] }
# MPI optional: enabled only when the mpi-support feature is requested
mpi = { version = "0.8", optional = true, default-features = false, features = [] }
# METIS remains optional and is built by metis-sys only when requested.
metis-sys = { version = "0.3.2", optional = true }
rand = { version = "0.8", features = ["std", "small_rng"], optional = true }
ahash = { version = "0.8", optional = true }
num-traits = "0.2"
serial_test = "3.2.0"
log = "0.4"
thiserror = "2.0.12"
wgpu = { version = "0.19", optional = true, features = ["wgsl"] }
pollster = { version = "0.3", optional = true }
futures-intrusive = { version = "0.5", optional = true }
cudarc = { version = "0.19.8", optional = true, default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading"] }
libloading = { version = "0.8.9", optional = true }

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
bincode = "1.3"
serial_test = "3.2.0"
proptest = "1.0"
rand_chacha = "0.3"
criterion = "0.4"
env_logger = "0.11"
rayon = "1"

[features]
default = []
# Legacy, infallible adapter. Off by default.
map-adapter = []
mpi-support = ["dep:mpi", "rayon", "dep:rand", "dep:ahash"]
mpi-derive = ["mpi/derive"]
metis-support = ["dep:metis-sys"]
strict-invariants = []   # compile-time switch for invariant checking in release
check-invariants = ["strict-invariants"]
check-empty-part = []
fast-hash = ["dep:ahash"]
deterministic-order = []
deterministic-owners = []
check-graph-edges = []
expensive-checks = []
binpack-retry = []
log = []
exact-metrics = []
mem-snapshot = []
rayon = ["dep:rayon"]
sparse-bitset = []
wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive"]
# Native NVIDIA execution. The public feature targets the CUDA 13.0.3 ABI and uses
# dynamic loading, so CUDA libraries are not required for CPU-only builds.
cuda = ["dep:cudarc", "dep:libloading", "cuda-13030"]
cuda-13030 = ["cudarc/cuda-13030"]
cuda-cublas = ["cuda", "cudarc/cublas"]
cuda-cusparse = ["cuda", "cudarc/cusparse"]
cuda-cusolver = ["cuda", "cudarc/cusolver"]
cuda-nccl = ["cuda", "cudarc/nccl"]
# Enables the experimental CGNS/HDF5 reader. Without this feature the CGNS
# entry point is deliberately compiled as an unsupported reader with a clear
# diagnostic instead of pretending CGNS is implemented.
cgns = []
triangle-support = []
tetgen-support = []
gmsh-support = []


[[example]]
name = "mesh_distribute_two_ranks"
# required-features = ["mpi-support"]
